--- a/delivery/tests/iframe_cross_domain.html
+++ b/delivery/tests/iframe_cross_domain.html
@@ -3,7 +3,7 @@ This page is simulating an ad. It's being served from
 document.write(window.location.href);
 </script>
 
-<script src="../XDM.js"></script>
+<script src="../js/XDM.js"></script>
 
-<script>XDM.send(top, "AthenaTest.testPassed", ["arg1 data", '"arg2 data"']);</script>
+<script>XDM.send(top, "LiftiumTest.testPassed", ["arg1 data", '"arg2 data"']);</script>
 
