Cross domain messenging working with all browsers. IE 6,7,8 FF 3,3.5 Safari 4, Camino Opera 10 Opera 9.64

--- a/delivery/tests/iframe_cross_domain.html
+++ b/delivery/tests/iframe_cross_domain.html
@@ -4,6 +4,6 @@ document.write(window.location.href);
 </script>
 
 <script src="../js/XDM.js"></script>
-
+<script>XDM.debugOn = true;</script>
+<script>XDM.iframeUrl = "/samples/liftium_iframe.html"</script>
 <script>XDM.send(top, "LiftiumTest.testPassed", ["arg1 data", '"arg2 data"']);</script>
-
