--- a/delivery/liftium_iframe.html
+++ b/delivery/liftium_iframe.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 </body>
-<script src="/js/XDM.js"></script>
+<script src="http://cdn.liftium.com/js/XDM.js"></script>
 <script>
 XDM.allowedMethods = [ "Liftium.iframeHop", "LiftiumTest.testPassed", "Liftium.XDM"];
 function XDM_onload (){
