Updated sample for Jeremy

--- a/delivery/samples/yes-300x250.html
+++ b/delivery/samples/yes-300x250.html
@@ -4,7 +4,17 @@
 <script type="text/javascript" src="http://yes.com/js/teeny.js" charset="utf-8"></script>
 
 <!-- BEGIN Liftium.com tag -->
-<script>LiftiumOptions = { pubid : 1044 };</script>
+<script>
+LiftiumOptions = { 
+	pubid : 1044,
+	google_ad_type : "text",
+	google_ad_channel : "old.yes.com",
+	google_ad_channel : "2600097020",
+	google_kw_type : "broad",
+	google_feedback : 'on',
+	google_kw : "music",
+ };
+</script>
 <script src="http://cdn.liftium.com/js/Liftium.js"></script>
 <script>Liftium.callAd("300x250")</script>
 <!-- END Liftium.com tag -->
