--- a/delivery/samples/yes-300x250.html
+++ b/delivery/samples/yes-300x250.html
@@ -2,6 +2,16 @@
 
 <link rel="stylesheet" href="http://yes.com/css/layout2.css" type="text/css" media="screen" />
 <script type="text/javascript" src="http://yes.com/js/teeny.js" charset="utf-8"></script>
+<div id="google_ads">
+	<p class="is_google_adsense">Ads by <a href="" class="href_is_google" target="_top">Google</a></p>
+	<div class="is_adsense_links child_adEntry link_is_url">
+		<h4><a href="" class="text_is_name href_is_url" target="_top"></a></h4>
+		<p class="desc text_is_desc"></p>
+		<p class="link"><a href="" class="href_is_url text_is_visibleUrl"></a></p>
+	</div>
+
+</div>
+
 
 <!-- BEGIN Liftium.com tag -->
 <script>
