remove trailing comma for IE

--- a/delivery/samples/yes-300x250.html
+++ b/delivery/samples/yes-300x250.html
@@ -22,7 +22,7 @@ LiftiumOptions = {
 	google_ad_channel : "2600097020",
 	google_kw_type : "broad",
 	google_feedback : 'on',
-	google_kw : "music",
+	google_kw : "music"
  };
 </script>
 <script src="http://cdn.liftium.com/js/Liftium.js"></script>
